--- a/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/positons.html
+++ b/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/positons.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
- <link rel="stylesheet" href="./postions.css">
+    <link rel="stylesheet" href="./postions.css">
 </head>
+
 <body>
     <h1>Position in CSS</h1>
     <div class="parent">
@@ -13,7 +15,153 @@
         <div class="child2">box2</div>
         <div class="child3">box3</div>
         <div class="child4">box4</div>
-
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus enim vel totam earum saepe minus excepturi
+            necessitatibus, accusantium dicta, nemo quod. Sed, ea saepe non alias molestias omnis culpa beatae dolorum,
+            dolore, amet vero adipisci tempora repellat hic veritatis deserunt maxime iusto similique. Voluptatem
+            aspernatur rerum mollitia voluptas ratione possimus temporibus blanditiis cupiditate maxime rem incidunt
+            aliquam nisi accusantium esse similique modi quos earum, doloribus, aut debitis architecto fugiat dolor sunt
+            consequuntur! Est natus rem ipsam amet, nostrum commodi eum, quaerat necessitatibus repellat dolorum autem
+            itaque ut suscipit aliquam sed unde sint pariatur officiis, omnis eligendi. Quis cupiditate eum consectetur
+            distinctio, deleniti non laudantium exercitationem provident, sit fugit, itaque est amet minima aliquam
+            nihil. Consequuntur laudantium ea id amet est ratione maiores aliquam pariatur labore ut quo dolorem
+            provident nostrum natus perspiciatis, illum doloribus ullam deserunt magni! Laboriosam nihil, a vitae qui
+            fugiat dolorem ducimus corporis, veritatis temporibus, dicta mollitia! Id numquam asperiores esse ex nihil,
+            illum error voluptates eos cumque est. Aut, porro cumque! Beatae cupiditate reiciendis ducimus voluptates,
+            sint nihil? Neque, ut tempora dicta dolores, numquam doloribus rerum molestias vero repellendus accusamus
+            totam officia alias minima, inventore voluptate atque autem. Culpa accusamus nesciunt repellendus labore
+            beatae soluta maxime quis officiis, sapiente porro totam dolores sed blanditiis aut, architecto voluptatum!
+            Earum optio voluptatem quisquam sed. Optio cumque necessitatibus architecto delectus eum dicta nesciunt
+            inventore, exercitationem illum eligendi odit in reprehenderit eos ea dolore officia sint quia, totam
+            voluptatem ut rerum aperiam. Quae sed quod quo eum sunt, nulla doloremque commodi ea explicabo inventore
+            optio quas voluptate! Libero error labore excepturi fugiat dolore, odit doloremque, enim ipsam incidunt
+            rerum perferendis nesciunt maxime quidem nihil nostrum dolor minima reprehenderit cupiditate cumque?
+            Possimus, veniam tempora molestias repellat nostrum modi voluptatem fugiat nisi reiciendis numquam
+            distinctio hic soluta enim. Illum atque vitae voluptatum consequatur, tenetur quas laudantium architecto.
+            Nihil in sint perferendis tempore mollitia a omnis porro inventore suscipit cumque. Est voluptates optio,
+            debitis quaerat excepturi illum, culpa fugit id similique nisi adipisci quisquam repudiandae aliquam impedit
+            ab sequi nihil necessitatibus ex beatae deleniti eaque. Porro modi itaque assumenda ipsam odio facilis
+            possimus ex iure sint ipsum labore, saepe rerum sed et magni explicabo doloribus quod dolores nisi, a esse
+            fugiat iusto. Mollitia ipsa ex odio maxime sit! Iusto minima possimus cumque aperiam harum? Dicta quas earum
+            doloribus quia excepturi repellat cupiditate porro nemo cumque similique ex accusantium, soluta vero
+            asperiores perferendis magnam rerum ipsum quasi. Laboriosam quis incidunt, explicabo sunt amet qui nam porro
+            corrupti commodi ipsa accusantium sed provident doloremque enim magni ipsam? Repellendus ut enim, cupiditate
+            harum quaerat libero natus illum modi ratione qui eligendi quo veritatis debitis facilis fugit cum quibusdam
+            alias perferendis adipisci officiis soluta. Iste ipsa sit ratione et officia corporis animi a excepturi
+            perspiciatis deleniti provident, nisi quam reprehenderit eaque harum nemo voluptates autem? Officia dolorum
+            facilis porro impedit? Architecto soluta reprehenderit cupiditate accusamus impedit dolores quasi repellat
+            placeat maiores veritatis nesciunt quo distinctio exercitationem, esse odio tempora provident magni enim
+            totam corrupti modi. Placeat possimus nulla tenetur, dolorem sit voluptatibus porro quas eligendi sapiente
+            alias, reprehenderit suscipit! Inventore voluptates dolores veniam explicabo facere? Aperiam delectus minus
+            reprehenderit recusandae vero sapiente laudantium quaerat, voluptatum consectetur fugiat sed vitae quibusdam
+            quidem necessitatibus deserunt repudiandae non. Ea dolore voluptas maxime distinctio nostrum porro eos id.
+            Sapiente provident, laborum obcaecati consectetur eius aspernatur dignissimos odit, ab necessitatibus earum
+            incidunt vel enim, numquam cupiditate molestiae. Maiores dolor, quibusdam nesciunt laborum aut fugit iste
+            ipsum deleniti ducimus blanditiis cumque, amet totam molestiae. Provident assumenda nemo ducimus architecto
+            praesentium quia aspernatur aliquid, sapiente placeat nobis nesciunt numquam a atque deleniti labore nisi
+            recusandae beatae temporibus tempore? Ex rerum deserunt error nostrum quas quibusdam earum laboriosam minus
+            veniam iste odit, reiciendis sint officia dolorem cum in. At doloribus accusamus nemo veritatis. Minima
+            error nesciunt id tenetur ab perspiciatis numquam delectus debitis illum assumenda. In velit sunt non,
+            accusantium, exercitationem provident, perspiciatis dicta pariatur quae sapiente iusto eveniet voluptatem
+            quo alias laudantium eum vel mollitia explicabo sit odio eaque harum vitae excepturi praesentium. Cum
+            delectus, recusandae dolorem in nisi illum vitae maiores odit et dolor quaerat maxime, velit ad optio
+            adipisci eos eligendi sint tempore. Commodi dolorum quam quis obcaecati. Quae placeat cum, beatae soluta
+            error nostrum rerum. Incidunt cumque voluptatem, similique nulla iure sequi eum explicabo cum ipsa deleniti,
+            accusantium molestias minus nisi esse hic voluptatum! Qui dolor inventore ipsam libero sit distinctio facere
+            dolores perspiciatis esse mollitia aspernatur impedit ipsa repellat ex omnis ducimus doloribus magni iusto
+            soluta vero eveniet, dicta adipisci? Cupiditate eligendi modi saepe quo totam maxime officia, error tenetur
+            nostrum, inventore veniam consequuntur cumque, voluptatibus suscipit. Repellat totam eveniet aut neque
+            ducimus explicabo, corporis, debitis nesciunt fugiat quo repellendus quia, ab placeat eligendi praesentium?
+            In dignissimos maxime aliquam laudantium voluptate architecto debitis, veritatis minima praesentium fuga ex
+            fugiat blanditiis repudiandae porro molestias omnis eveniet repellat suscipit, tempore quos? Quas nesciunt
+            voluptatibus id officia! Quae praesentium sapiente qui repellendus necessitatibus unde voluptates?
+            Reprehenderit laboriosam ut nemo accusamus id nam necessitatibus eius aut tenetur, quo non eaque voluptates
+            itaque eligendi eos impedit vel! Quasi asperiores ratione, reprehenderit incidunt autem unde quibusdam eum,
+            libero neque dolorem mollitia tempora deleniti possimus. Quod magnam hic maiores modi dolorum fugit ea
+            facere eos exercitationem ad cupiditate illo eius voluptate tenetur, corrupti laudantium neque tempore esse
+            incidunt. Modi mollitia nemo unde dolor ab, rem maxime incidunt fuga sunt, officia, necessitatibus
+            doloremque dolores illo libero. Excepturi dolor sint esse iure illum id, ducimus dolores assumenda totam
+            sequi? Dolore dolor unde pariatur cum commodi labore nam recusandae cumque? Exercitationem distinctio cum
+            architecto, placeat quidem, tempore veniam dignissimos veritatis deleniti modi corporis facilis quae laborum
+            asperiores consectetur quaerat nemo inventore harum vel? Ab repellat distinctio atque corporis dolores
+            eveniet consequuntur odit ullam asperiores assumenda laudantium amet reprehenderit esse voluptate temporibus
+            unde expedita est architecto, sed voluptatibus. Aliquam obcaecati quas alias ullam! Expedita perspiciatis
+            praesentium velit, amet debitis ut iure inventore consequuntur, voluptate distinctio quo incidunt assumenda
+            dolores, adipisci deleniti nihil neque quisquam tenetur ea architecto sequi. Dolorum omnis ratione nobis
+            atque vitae obcaecati neque nam quo officia? Consequatur in harum tenetur, illo animi facere dolore
+            consequuntur non architecto doloremque quo perferendis facilis! Sit distinctio vel aspernatur assumenda odio
+            inventore hic dignissimos culpa maxime amet. Dolor ducimus, soluta amet nihil officia ea et voluptates
+            sapiente commodi, itaque consequatur dolore rem ullam tempore totam provident eum consectetur! Incidunt
+            quisquam aspernatur rerum eaque ut, inventore impedit corporis qui maiores suscipit odio illum expedita
+            aperiam laudantium fuga ipsum, commodi deserunt quam dolorum, quidem consectetur ab nam officia eius!
+            Placeat porro ut earum magnam delectus, obcaecati quod iure ratione fugiat doloribus tempore amet quas
+            dolore rerum assumenda et debitis aliquam voluptate optio accusantium. Laborum aliquid recusandae facilis
+            illum rerum consectetur, saepe ipsum eaque quibusdam, molestiae doloribus ea ratione quo laudantium
+            repellendus voluptates suscipit vitae. Voluptatum nostrum, quae nam corporis laudantium ipsum quis! Earum
+            qui eligendi reprehenderit iure similique, excepturi voluptate eveniet est itaque sunt distinctio! Ipsum
+            doloribus aspernatur impedit a veniam asperiores debitis amet, modi facere beatae placeat, magni itaque quae
+            laudantium autem repellendus dolorum laboriosam accusamus voluptatum saepe sit hic! Consequatur at expedita,
+            quos, adipisci asperiores aliquid repellendus aspernatur perspiciatis pariatur ullam temporibus optio, a aut
+            modi autem recusandae maiores! Quia mollitia ea unde enim porro in exercitationem? Recusandae cupiditate
+            molestiae rem atque modi fugit? Aut eaque totam harum voluptates obcaecati aliquid deserunt sunt architecto
+            assumenda nesciunt. Iure tempore suscipit natus, consequatur vitae eveniet aut, amet praesentium tenetur
+            odit culpa itaque fugit? Aliquid officia nemo eveniet facere sint cumque? Error natus officiis fuga fugiat
+            quas quo illum a, ab sapiente eligendi dignissimos explicabo, blanditiis quod eos, aperiam totam dolorem non
+            architecto cum voluptates. Quo eius doloribus eum facere vero reiciendis quidem ipsum iure aperiam quis qui
+            officiis numquam, voluptatibus quod dicta repudiandae! Mollitia similique consequuntur corrupti ducimus
+            pariatur ratione quod nobis, modi nam! Ex repudiandae quisquam, nemo necessitatibus facilis eum asperiores
+            tenetur nesciunt, ratione, corporis dicta voluptates unde aut. Rem, animi vitae corrupti labore veniam
+            voluptate soluta quidem aspernatur modi delectus illum perspiciatis facere quia aliquid ullam tempore,
+            obcaecati quibusdam commodi repudiandae cupiditate, reiciendis pariatur magni. Voluptate minus iste,
+            temporibus atque perspiciatis modi mollitia. Accusantium fugiat impedit, debitis veritatis temporibus amet
+            illum deserunt. Fuga molestiae, quasi praesentium dicta eaque excepturi veniam veritatis voluptate esse
+            officia, deleniti dolorum! Tempora nemo ratione ea ipsa incidunt, aspernatur mollitia sequi at commodi
+            quaerat, nulla beatae nisi maxime voluptates. Error, nemo quibusdam recusandae necessitatibus soluta
+            suscipit facere dicta iure id, eligendi omnis ipsum odit voluptate porro voluptas corrupti assumenda
+            consequuntur earum eveniet quas maiores autem iste. Pariatur, provident illo. Nulla ipsa alias consequatur,
+            iste eum est debitis cum quasi nam ipsam laborum ad, totam, voluptatum qui omnis! Alias molestiae iste,
+            possimus pariatur porro totam, nam doloremque eligendi quibusdam aliquid illum molestias modi excepturi rem
+            similique dolor amet aperiam nisi esse quos at! Repellat pariatur molestias natus, minus reiciendis
+            exercitationem eaque cum voluptatibus inventore, placeat quas quibusdam ea rerum iusto iste quia,
+            dignissimos et delectus aut deleniti labore vel voluptates praesentium minima. Reprehenderit explicabo et
+            debitis excepturi quam ab quod architecto. Consectetur rerum tempora temporibus explicabo ad cumque
+            veritatis cupiditate esse sunt fugiat ut expedita adipisci error excepturi et, eveniet atque molestias rem
+            magni illo. Officia totam explicabo nobis voluptatem dolore blanditiis quia eos impedit temporibus? Odit
+            necessitatibus aspernatur dolorem cum cupiditate rem a nihil optio at voluptates? Sed veniam praesentium
+            quam itaque alias aspernatur repellat accusamus dolorem excepturi! Perferendis, nesciunt minus
+            exercitationem omnis sed molestiae aperiam quibusdam doloremque! Repellat consequatur nesciunt earum,
+            suscipit fugiat tempora necessitatibus natus voluptates perspiciatis quia quam sed tenetur quaerat hic quod,
+            ab sint corporis velit rem. Corporis at id consequuntur facere, minus, voluptatem quidem, rem consequatur
+            labore laudantium nostrum laborum. Totam placeat distinctio harum accusamus. Pariatur nostrum ad dicta, enim
+            soluta neque qui nam aliquam amet laborum perspiciatis, non debitis commodi quae quo! Veniam possimus ipsa
+            facere itaque qui architecto illum pariatur assumenda ratione aut dolor recusandae doloribus delectus
+            veritatis voluptatum nam, consequuntur saepe nihil, nostrum placeat temporibus at! Accusamus mollitia quod
+            laborum corporis eius commodi labore, culpa, beatae vero sint nisi atque magni non ratione necessitatibus
+            autem facere iusto quam minima ipsum eum veniam nemo esse voluptates! Est culpa exercitationem dicta atque
+            aspernatur iusto asperiores dignissimos doloremque porro qui harum ratione adipisci modi minus nihil beatae
+            dolorum neque laboriosam sint ut quod omnis, iure id? Fuga, illum. Molestiae rem nesciunt reiciendis omnis
+            libero quae dolor id repellat neque nam? Porro reprehenderit eius amet id obcaecati sed nisi, deleniti
+            reiciendis laboriosam dicta perferendis asperiores eveniet, deserunt molestias dolore cum aliquam eos ipsam
+            incidunt voluptas sunt debitis inventore magni. Consectetur excepturi ex quo sapiente delectus laboriosam
+            voluptatibus tempora fugit eveniet beatae, consequatur repellendus, minima nisi omnis odio culpa. Aliquid
+            fugit quisquam molestias doloremque, omnis soluta, ducimus, aliquam itaque placeat commodi modi doloribus
+            voluptates obcaecati aperiam est quia distinctio iusto odit vero id? Natus laborum voluptatibus facere illo.
+            Quaerat corrupti sint cum quasi expedita magnam error earum ad velit, eos ipsa sed officia? Ea similique
+            iste vel, unde perspiciatis ipsum magnam exercitationem tempore suscipit laudantium cupiditate iusto
+            voluptates possimus vero quasi. Tenetur commodi corrupti molestiae amet consequuntur aspernatur
+            necessitatibus harum, aperiam, quo, quis aut perferendis error vitae accusantium enim expedita consequatur
+            nulla. Hic fugiat qui esse magnam neque! Laborum placeat deleniti culpa earum dolore. Et, minus maxime illo
+            asperiores reiciendis tempora aliquid ratione quod sint recusandae. Fugit doloribus, reprehenderit ut
+            aperiam, est voluptatum tempora vero harum aut quos delectus magni quod laudantium repudiandae velit
+            quaerat. Dolor commodi possimus et nisi, omnis, ratione tempore, magnam architecto perferendis quaerat
+            repellat! Ad eius fugiat itaque aut sapiente magni totam ipsa, odio mollitia autem, veritatis sunt dolorum
+            saepe architecto. Obcaecati magnam consequatur eligendi quia corrupti repellat reiciendis. Vel nobis
+            tempora, harum atque incidunt voluptas, et nostrum cum iste, accusantium doloribus reiciendis sed recusandae
+            quibusdam qui! Mollitia error esse hic asperiores, quisquam nemo minima sint dicta deserunt id aspernatur!
+            Ab ea doloribus sequi, numquam vitae ullam quos delectus quod placeat tenetur velit temporibus officiis
+            quae? Quis harum iure nisi dolor labore soluta suscipit doloribus sunt rem voluptatum? Quam, modi est!</p>
     </div>
 </body>
+
 </html>
