Float in CSS property has been added

--- a/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/index.html
+++ b/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/index.html
@@ -11,6 +11,7 @@
 <body>
     <a href="./positons.html">Positions</a>
     <a href="./flex.html">Flex page</a>
+    <a href="./float.html">Float css</a>
     <div class="box">
         <h1>NAVIGATION BAR</h1>
     </div>
