Class 09 CSS topics updated (Units in CSS, Introduction to Position in CSS, Why we need to use position in CSS, Z-index)

--- a/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/index.html
+++ b/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/index.html
@@ -7,38 +7,42 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-    <a href="./positons.html">Positions</a>
-    <a href="./flex.html">Flex page</a>
-    <a href="./float.html">Float css</a>
-    <div class="box">
-        <h1>NAVIGATION BAR</h1>
-    </div>
-
-    <div class="homescreen">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure molestias dolores aperiam numquam temporibus
-            ipsum at molestiae dolorum, totam earum excepturi itaque, repellat id mollitia laboriosam corrupti
-            consectetur nulla ullam quia. Nesciunt explicabo laudantium earum ex, nobis repellendus, incidunt aut dolore
-            nostrum facilis mollitia pariatur molestias tempora officiis, voluptatum accusamus!</p>
-        <div class="child-1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, repellat?</p>
+    <a href="./position.html">Go to postion in css page</a>
+    <h1>Units in css</h1>
+    <h2>Absolute Lengths</h2>
+    <div class="parent">
+        <div class="div-px">
+            <p class="px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, reiciendis?</p>
         </div>
-        <div class="child-2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, repellat?</p>
+        <div class="div-vw">
+            <p class="vw">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, reiciendis?</p>
         </div>
 
-        <div class="child-3">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, repellat?</p>
+        <div class="child-em">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum corrupti cum esse quaerat, nam facere
+                voluptates repellat quisquam accusamus suscipit rem iste quis quae magni consectetur? Animi enim odit
+                fugit?</p>
+                 <p class="para-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum corrupti cum esse quaerat, nam facere
+                voluptates repellat quisquam accusamus suscipit rem iste quis quae magni consectetur? Animi enim odit
+                fugit?</p>
+                <section>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, reiciendis!</p>
+                </section>
         </div>
-    </div>
-    <footer><p>FOOTER</p></footer>
 
-    <div class="viewport">
-        <p>VH</p>
-        <p>VW</p>
-        <p>VH</p>
-        <p>VH</p>
+        <div class="child-rem">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, error.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, molestiae.</p>
+        </div>
+
+        <div id="percentage">
+            <div>box 1</div>
+            <div>box 2</div>
+
+        </div>
+
+
 
     </div>
 </body>
